# RehabPro

./: .~lock.fasttime28.csv#  .~lock.fullfinal.csv#  .~lock.trajectoryfast.csv#  README.md  finalfast2.csv  fullfinal.csv  fullstart.csv  fulltraj.csv  matrix28_fast2.bag  matrix28_fastmerged.bag  matrix28_full.bag  matrix28full2.bag  matrixslow1_test.bag  matrixslow28full_test.bag  slow1start.csv  slow1stop.csv  slow1traj.csv
Data2/: finalfull2.csv  fulltraj2.csv  startfull2.csv
data1112/: bagmerge.py  fast1final.csv  fast1start.csv  fast1traj.csv  fast2final.csv  fast2start.csv  fast2traj.csv  fastfinal.csv  faststart.csv  matrix28_fast1.bag  matrix28_fast2merge.bag  matrixslow1_test.bag  slow1final.csv  slow1start.csv  slow1traj.csv
devel/: .catkin
devel/lib/industrial_robot_client/: joint_trajectory_action  motion_download_interface  motion_download_interface_bswap  motion_streaming_interface  motion_streaming_interface_bswap  robot_state  robot_state_bswap
devel/lib/motion_planning/: add_body  des_frame_pub  des_point_pub  goal_publisher  into_ws  matrix_reader  matrix_reader_18  matrix_reader_28  matrix_reader_5  matrix_storer  matrix_storer_18  matrix_storer_28  matrix_storer_28fast  matrix_storer_5  matrix_storer_fastall  matrix_storer_slow28  move_cSpace  move_cartesian  move_iter_plan  move_jSpace  move_person  move_surfaces  move_to_points  obj_tf  plan_reader  sphere_rosBridge  tf_listener  trajectory_pub  velocity_scaling
devel/lib/pkgconfig/: industrial_deprecated.pc  industrial_msgs.pc  industrial_robot_client.pc  industrial_robot_simulator.pc  industrial_trajectory_filters.pc  industrial_utils.pc  manequin_description.pc  motion_planning.pc  myur5_description.pc  myur5_moveit_config.pc  simple_message.pc  ur10_e_moveit_config.pc  ur10_moveit_config.pc  ur3_e_moveit_config.pc  ur3_moveit_config.pc  ur5_e_moveit_config.pc  ur5_moveit_config.pc  ur_bringup.pc  ur_description.pc  ur_driver.pc  ur_e_description.pc  ur_e_gazebo.pc  ur_gazebo.pc  ur_kinematics.pc  ur_modern_driver.pc  ur_msgs.pc
devel/share/industrial_deprecated/cmake/: industrial_deprecatedConfig.cmake
devel/share/industrial_msgs/cmake/: industrial_msgs-msg-paths.cmake  industrial_msgsConfig.cmake
devel/share/industrial_robot_client/cmake/: industrial_robot_clientConfig.cmake
devel/share/industrial_robot_simulator/cmake/: industrial_robot_simulatorConfig.cmake
devel/share/industrial_trajectory_filters/cmake/: industrial_trajectory_filtersConfig.cmake
devel/share/industrial_utils/cmake/: industrial_utilsConfig.cmake
devel/share/manequin_description/cmake/: manequin_descriptionConfig.cmake
devel/share/motion_planning/cmake/: motion_planningConfig.cmake
devel/share/myur5_description/cmake/: myur5_descriptionConfig.cmake
devel/share/myur5_moveit_config/cmake/: myur5_moveit_configConfig.cmake
devel/share/simple_message/cmake/: simple_messageConfig.cmake
devel/share/ur10_e_moveit_config/cmake/: ur10_e_moveit_configConfig.cmake
devel/share/ur10_moveit_config/cmake/: ur10_moveit_configConfig.cmake
devel/share/ur3_e_moveit_config/cmake/: ur3_e_moveit_configConfig.cmake
devel/share/ur3_moveit_config/cmake/: ur3_moveit_configConfig.cmake
devel/share/ur5_e_moveit_config/cmake/: ur5_e_moveit_configConfig.cmake
devel/share/ur5_moveit_config/cmake/: ur5_moveit_configConfig.cmake
devel/share/ur_bringup/cmake/: ur_bringupConfig.cmake
devel/share/ur_description/cmake/: ur_descriptionConfig.cmake
devel/share/ur_driver/cmake/: ur_driverConfig.cmake
devel/share/ur_e_description/cmake/: ur_e_descriptionConfig.cmake
devel/share/ur_e_gazebo/cmake/: ur_e_gazeboConfig.cmake
devel/share/ur_gazebo/cmake/: ur_gazeboConfig.cmake
devel/share/ur_kinematics/cmake/: ur_kinematicsConfig.cmake
devel/share/ur_modern_driver/cmake/: ur_modern_driverConfig.cmake
devel/share/ur_msgs/cmake/: ur_msgs-msg-extras.cmake  ur_msgs-msg-paths.cmake  ur_msgsConfig.cmake
fast/: trajectoryfast.csv  trajectoryfastfinal.csv  trajectoryfaststart.csv
fastall/: fastallfinal.csv  fastallstart.csv  fastalltraj.csv
logs/motion_planning/: build.make.048.log.stderr  build.make.050.log.stderr  build.make.062.log.stderr
newdata/: fastfinalnames.txt  fastslownames.txt  faststartnames.txt  fasttime.txt  fasttraj.csv  fulltraj2.csv  matrix28_testfast.bag  matrixslow28_test.bag  slowfinalnames.txt  slowtime.txt  slowtraj.txt
rosbag backup/: matrix_storer_fastall.bag
slow/: finalslow28.csv  trajectorslowstart.csv  trajectorslowtrajectory.csv
slowfull/: slowfullfinal.csv  slowfullstart.csv  slowfulltraj.csv
src/: urfk.csv  urfk.py
src/motion_planning/: CMakeLists.txt
src/motion_planning/src/: UR5kine.py  add_body.cpp  des_frame_pub.cpp  des_point_pub.cpp  goal_publisher.cpp  into_ws.cpp  matrix_reader.cpp  matrix_reader_18.cpp  matrix_reader_28.cpp  matrix_reader_5.cpp  matrix_storer.cpp  matrix_storer_18.cpp  matrix_storer_28.cpp  matrix_storer_28fast.cpp  matrix_storer_5.cpp  matrix_storer_fastall.cpp  matrix_storer_slow28.cpp  move_cSpace.cpp  move_cartesian.cpp  move_iter_plan.cpp  move_jSpace.cpp  move_person.cpp  move_surfaces.cpp  move_to_points.cpp  obj_tf.cpp  plan_reader.cpp  plotter.py  sphere_rosBridge.cpp  tf_listener.cpp  trajectory_pub.cpp  ur_kin.cpp  velocity_scaling.cpp
src/myur5sim/manequin_description/: CMakeLists.txt
src/myur5sim/manequin_description/launch/: manequin.launch
src/myur5sim/manequin_description/urdf/: scalable_person.urdf.xacro  test.urdf.xacro
src/myur5sim/myur5_description/controllers/: person_controllers.yaml  test_controllers.yaml
src/myur5sim/myur5_description/launch/: myur5.launch  person.launch  test.launch
src/myur5sim/myur5_description/urdf/: environment.urdf.xacro  myur5.urdf.xacro  person.urdf.xacro  scalable_person.urdf.xacro  tes2.urdf.xacro
src/myur5sim/myur5_moveit_config/: .setup_assistant  package.xml
src/myur5sim/myur5_moveit_config/config/: controllers.yaml  joint_limits.yaml  joint_names.yaml  myur5.srdf
src/myur5sim/myur5_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  (+14 more)
(+7 files in other folders)
